<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_MiPerfilActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoPantallaInicio"
    tools:context=".Registro1Activity">

    <TextView
        android:id="@+id/textViewCabecera_Registro1"
        android:layout_width="216dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:text="@string/cabeceraRegistro_login"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_registro2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <LinearLayout
        android:id="@+id/linearLayout_registro2"
        android:layout_width="374dp"
        android:layout_height="369dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNombre_registro1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/nombreRegistro_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextApellidos_registro1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/apellidosRegistro_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCiudad_registro1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/ciudadRegistro_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextHospital_registro1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/hospitalRegistro_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextEnfermedad_registro1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/enfermedadRegistro_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextBreveDescripcion_registro1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/breveDescripcionRegistro_login"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSiguiente_registro1"
        android:layout_width="368dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/BotonesInicio"
        android:text="@string/btnSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_registro2" />

</androidx.constraintlayout.widget.ConstraintLayout>