<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_MiPerfilActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoPantallaInicio"
    tools:context=".MiPerfilActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/espacioEnBlanco1_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""/>

            <TextView
                android:id="@+id/cabecera_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/BotonesInicio"
                android:gravity="center"
                android:text="@string/perfil_usuario"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/espacioEnBlanco2_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""/>

            <ImageView
                android:id="@+id/imagenUsuario_miPerfilActivity"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/descripcion_imagen"
                android:src="@drawable/default_user" />

            <TextView
                android:id="@+id/espacioEnBlanco3_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""/>

            <TextView
                android:id="@+id/nombre_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_miPerfil"
                android:textColor="@color/BotonesInicio"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nombreUser_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/apellidos_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/apellidos_miPerfil"
                android:textColor="@color/BotonesInicio"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/apellidosUser_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ciudad_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ciudad_miPerfil"
                android:textColor="@color/BotonesInicio"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/ciudadUser_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/hospital_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hospital_miPerfil"
                android:textColor="@color/BotonesInicio"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/hospitalUser_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/enfermedad_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enfermedad_miPerfil"
                android:textColor="@color/BotonesInicio"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/enfermedadUser_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sobreMi_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/descripcion_miPerfil"
                android:textColor="@color/BotonesInicio"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/sobreMiUser_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/email_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email_miPerfil"
                android:textColor="@color/BotonesInicio"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/emailUser_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tlf_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/telefono_miPerfil"
                android:textColor="@color/BotonesInicio"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/telefonoUser_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/espacioEnBlanco4_miPerfilActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""/>




        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>